# nurion

./: .gitignore  .ruff.toml  LICENSE  README.md  agents.md  pyproject.toml  todo.md
aether/: .coverage  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
aether/aether/: __init__.py  app.py
aether/aether/api/routes/: __init__.py  health.py  iceberg_catalog.py  k8s.py  lance_namespace.py
aether/aether/core/: __init__.py  object_store.py  settings.py  store.py
aether/aether/db/: __init__.py  session.py
aether/aether/models/: __init__.py  base.py  catalog.py  iceberg.py  k8s.py  lance.py
aether/aether/schemas/: catalog.py  iceberg.py  k8s.py  lance.py
aether/aether/services/: __init__.py  catalog_service.py  iceberg_catalog_service.py  iceberg_table_service.py  k8s_cluster_service.py  k8s_connection.py  lance_table_service.py  localqueue_service.py  rayjob_service.py  rayjob_sync_service.py
aether/alembic/: env.py
aether/alembic/versions/: 0001_create_catalog_tables.py  0002_add_iceberg_namespaces_and_tables.py  0003_add_k8s_clusters.py
aether/scripts/: entrypoint.sh
aether/tests/: __init__.py  conftest.py  test_iceberg_catalog_api.py  test_k8s_services.py  test_lance_namespace_api.py  test_rayjob_services.py
e2e/: README.md  conftest.py  pyproject.toml  test_aether_setup.py  test_workflow_iceberg_image.py  test_workflow_lance_video.py
e2e/utils/: __init__.py  aether_client.py  debug_collector.py  test_data.py
infra/: .gitignore  Pulumi.nightly.yaml  Pulumi.yaml  __main__.py  aether.py  config.py  pyproject.toml  runner.py
solstice/: EXAMPLES.md  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  __init__.py  pyproject.toml  quickstart.py  setup.py
solstice/design-docs/: architecture.md  checkpoint-and-recovery.md  cursor_s2_master.md  dynamic-worker-scaling.md  partition-backpressure-improvements.md  queue-issues-to-resolve.md  spark-source-v2.md  tansu-pyo3-binding.md  webui.md
solstice/examples/: test_video_slice.py  video_slice_demo.py  webui_demo.py
solstice/java/: pom.xml
solstice/java/raydp-main/: pom.xml
solstice/java/raydp-main/src/main/java/org/apache/spark/raydp/: RayDPUtils.java  RayExecutorUtils.java  RayPythonWorkerUtils.java
solstice/java/raydp-main/src/main/scala/org/apache/spark/deploy/: SparkSubmit.scala
solstice/java/shims/common/: pom.xml
solstice/java/shims/common/src/main/scala/org/apache/spark/: RayDPConfigs.scala
solstice/java/shims/spark340/: pom.xml
solstice/java/shims/spark350/: pom.xml
solstice/raydp/: __init__.py  _build_hooks.py  context.py  utils.py
solstice/raydp/spark/: __init__.py  dataset.py  ray_cluster.py  ray_cluster_master.py  ray_pyworker.py
solstice/raydp/tests/: conftest.py  test_mpi.py  test_spark_cluster.py  test_spark_utils.py  test_tf.py  test_torch_sequential.py  test_xgboost.py
solstice/solstice/: __init__.py  main.py
solstice/solstice/actors/: __init__.py  meta_service.py  source.py  stage_master.py  state_master.py  worker.py
solstice/solstice/core/: __init__.py  job.py  models.py  operator.py  operator_master.py  output_buffer.py  split_id.py  split_payload_store.py  stage.py  stage_master.py  stage_master_v2.py  worker.py
solstice/solstice/operators/: __init__.py  batch.py  filter.py  map.py  sink.py  source.py  video.py
solstice/solstice/operators/sinks/: __init__.py  base.py  file.py  lance.py  print.py
solstice/solstice/operators/sources/: __init__.py  base.py  file.py  iceberg.py  lance.py  source.py  spark.py  sparkv2.py
solstice/solstice/queue/: __init__.py  backend.py  factory.py  memory.py  partition_manager.py  protocols.py  ray_backend.py  tansu.py
solstice/solstice/runtime/: __init__.py  autoscaler.py  local_runner.py  ray_runner.py  ray_runner_v2.py  state_push.py
solstice/solstice/state/: __init__.py  backend.py  checkpoint.py  checkpoint_manager.py  manager.py  state_master.py  store.py
solstice/solstice/tests/: __init__.py  helpers.py
solstice/solstice/utils/: __init__.py  logging.py  remote.py
solstice/solstice/webui/: README.md  __init__.py  app.py  history_server.py  job_webui.py  models.py  portal.py  ray_state.py  registry.py
solstice/solstice/webui/api/: __init__.py  configuration.py  events.py  exceptions.py  jobs.py  lineage.py  overview.py  realtime.py  stages.py  workers.py
solstice/solstice/webui/collectors/: __init__.py  archiver.py  events.py  exceptions.py  lineage.py  metrics.py
solstice/solstice/webui/state/: __init__.py  manager.py  messages.py  producer.py
solstice/solstice/webui/static/css/: solstice.css
solstice/solstice/webui/storage/: __init__.py  base.py  portal_storage.py  prometheus_exporter.py  slatedb_storage.py
solstice/solstice/webui/templates/: base.html  checkpoints.html  completed_jobs.html  configuration.html  exceptions.html  job_detail.html  lineage.html  portal.html  running_jobs.html  stage_detail.html  worker_detail.html  workers.html
solstice/tansu-py/: Cargo.toml  README.md  pyproject.toml
solstice/tansu-py/python/tansu_py/: __init__.py
solstice/tansu-py/src/: broker.rs  lib.rs
solstice/tests/: __init__.py  conftest.py  test_autoscaler.py  test_backpressure.py  test_benchmark.py  test_checkpoint.py  test_crash_recovery.py  test_end_to_end.py  test_gc.py  test_integration_backpressure.py  test_integration_iceberg.py  test_integration_lance.py  test_integration_partition.py  test_integration_partition_backpressure.py  test_integration_skew_detection.py  test_operators.py  test_partition_backpressure_integration.py  test_partition_management.py  test_partition_manager.py  test_pipeline.py  test_pipeline_v2.py  test_queue_backend.py  test_skew_detection.py  test_spark_source.py  test_spark_source_v2.py  test_stage_master.py  test_stage_master_v2.py  test_state.py  test_tansu_s3.py  test_video_workflow.py
solstice/tests/testdata/: __init__.py  generate_datasets.py  generate_spark_testdata.py
solstice/tests/utils/: __init__.py  video_dataset.py
solstice/todo/: README.md  webui.md
solstice/workflows/: __init__.py  simple_etl.py  video_processing.py  video_slice_workflow.py
(+35 files in other folders)
