[project]
name = "aether"
version = "0.1.0"
description = "FastAPI service for Nurion data platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "lance>=0.38.2",
    "lance-namespace>=0.0.19",
    "fastapi>=0.120.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "pyiceberg>=0.10.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyiceberg[rest]>=0.7.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aether", "aether.*"]
exclude = ["alembic", "alembic.*"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "B008",  # Ignore function calls in default arguments (FastAPI pattern)
    "SIM105",  # Allow try-except-pass pattern
]

[tool.ruff.lint.isort]
known-first-party = ["aether"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
