[project]
name = "nurion-infra"
version = "0.1.0"
description = "Pulumi infrastructure for Nurion nightly E2E testing"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
    "pulumi-random>=4.0.0,<5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.uv]
# Use China mirrors for faster downloads
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
