[project]
name = "solstice"
version = "0.1.0"
description = "A Ray-based distributed streaming processing framework with exactly-once semantics"
authors = [
    {name = "Solstice Contributors"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

dependencies = [
    "ray[default]==2.48.0",
    "pyarrow>=18.1.0",
    "pandas>=2.0.0",
    "click>=8.1.7",
    "fsspec[s3]>=2024.6.0",
    "pylance>=0.38.0",
    "pyiceberg[sqlalchemy]>=0.10.0",
    "sqlalchemy>=2.0.0",
    "py-spy>=0.4.1",
]

[project.scripts]
solstice = "solstice.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["solstice*", "workflows*"]

[tool.setuptools.package-data]
solstice = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince212",
]
markers = [
    "integration: marks integration tests",
]
