[project]
name = "solstice"
version = "0.1.0"
description = "A Ray-based distributed streaming processing framework with exactly-once semantics"
authors = [
    {name = "Solstice Contributors"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

dependencies = [
    "tansu-py",  # Embedded Kafka-compatible broker (built from tansu-py/)
    "ray[default]==2.48.0",
    "pyarrow>=18.1.0",
    "pandas>=2.0.0",
    "click>=8.1.7",
    "fsspec[s3]>=2024.6.0",
    "pylance>=0.38.0",
    "pyiceberg[sqlalchemy]>=0.10.0",
    "sqlalchemy>=2.0.0",
    "py-spy>=0.4.1",
    "pyspark==3.5.6",
    "aiokafka>=0.12.0",
    # WebUI dependencies
    "slatedb>=0.8.1",           # S3-backed KV store for history
    "fastapi>=0.115.0",         # Web framework
    "jinja2>=3.1.0",            # Template engine
    "uvicorn>=0.34.0",          # ASGI server
    "sse-starlette>=1.8.0",     # Server-Sent Events
    "prometheus-client>=0.20.0", # Prometheus metrics export
]

[project.scripts]
solstice = "solstice.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.0",
    "testcontainers[minio,postgres]>=4.10.0",
    "minio>=7.2.0",
    "requests>=2.32.0",
    "uvicorn>=0.34.0",
    "psycopg[binary]>=3.2.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.11.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "lance-namespace>=0.0.19",
    "boto3>=1.35.0",
    "s3fs>=2024.6.0",
    "kubernetes>=32.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2", "maturin>=1.9"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
tansu-py = { path = "tansu-py", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["solstice*", "workflows*", "raydp*"]

[tool.setuptools.package-data]
solstice = ["py.typed", "webui/templates/**/*", "webui/static/**/*"]
raydp = ["jars/*.jar"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-m 'not benchmark'"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince212",
    "ignore:lance is not fork-safe:UserWarning",
]
markers = [
    "integration: marks integration tests",
    "benchmark: marks performance benchmark tests (skipped by default in CI)",
    "slow: marks slow tests (Tansu broker startup ~5s per test)",
    "timeout: marks tests with timeout (requires pytest-timeout)",
]
