[package]
name = "tansu-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tansu_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
tokio = { version = "1.42", features = ["full"] }
tansu-broker = { version = "0.5.9", features = ["dynostore"] }
tansu-service = "0.5.9"
tansu-storage = { version = "0.5.9", features = ["dynostore"] }
url = "2.5"
uuid = { version = "1.19", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = "0.3"
